--- a/bio.html
+++ b/bio.html
@@ -89,11 +89,13 @@ span.onclick = function() {
 		<p class="space">School of Media & Design, 2015</p>
 		<h1>experience:</h1>
 		<p>stage photographer, we day</p>
-		<p>artist photographer, rbc bluesfest 2016 & 2017</a></p>
+		<p>artist photographer, rbc bluesfest 2015 - 2017</a></p>
 		<p>freelance photographer: portrait, shows</p>
 		<p class="space">freelance graphic designer: covers, posters, illustration, calligraphy</p>
+		<h1>design skills:</h1>
+		<p class="space">adobe lightroom, photoshop, illustrator, indesign, premiere pro, after effects</p>
 		<h1>interests:</h1>
-		<p class="space">concerts, travel, ink, fashion, baking & dogs</p>
+		<p class="space">music & concerts, travel, matcha, dystopian shows, baking & dogs</p>
 		
 	</div>
 	</section>
