--- a/bio.html
+++ b/bio.html
@@ -51,23 +51,23 @@
 	
 	<section id="about" class="about grid">
 	<div class="pt1 intro unit unit-s-1 unit-m-1-2">
-		<img src="img/ks.png" alt="katie-situ">
+		<img src="img/ks-bio.png" alt="katie-situ">
 	</div>
 	<div class="pt2 intro unit unit-s-1 unit-m-1-2">
 		<h1>KATIE SITU</h1>
-		<p class="space1">(b. 1993, ottawa, canada)</p>
+		<p class="space1">(ottawa, canada)</p>
 		<h1>education:</h1>
-		<p>OCAD in Graphic Design from Algonquin College,</p>
-		<p>School of Media & Design, 2015</p>
+		<p>graphic design,
+		<p><i>algonquin college, school of media & design, 2015</i></p>
 		<h1>experience:</h1>
 		<p>stage photographer, we day</p>
 		<p>artist photographer, rbc bluesfest 2015 - 2017</p>
 		<p>freelance photographer: portrait, shows</p>
 		<p>freelance graphic designer: covers, posters, illustration, calligraphy</p>
-		<h1>design skills:</h1>
+		<h1>software:</h1>
 		<p>adobe lightroom, photoshop, illustrator, indesign, premiere pro, after effects</p>
 		<h1>interests:</h1>
-		<p>music & concerts, travel, matcha, dystopian shows, baking & dogs</p>
+		<p>music, concerts, travel, matcha, dystopian shows, fashion</p>
 		
 	</div>
 	</section>
