--- a/bio.html
+++ b/bio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>katiesitu ·  bio</title>
+	<title>bio · katiesitu</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
@@ -30,40 +30,30 @@
     		<input type="checkbox"/>
 			<span></span>
     		<span></span>
-			<ul class="menu" id="menu">
-				<!--<li class="ease-all"><a href="http://katiesitu.ca/">MUSIC</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/design">ALBUMS</a></li>
-				-->
-				<li class="ease-all"><a href="http://katiesitu.ca/">PHOTO</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/design">DESIGN</a></li>
-				<li class="ease-all"><a href="http://katiesitu.ca/bio"><strong>BIO</strong></a></li>
+			<ul class="nav" id="nav">
+				<li class="ease-all"><a href="http://katiesitu.ca/">01 photo</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/design">02 design</a></li>
+				<li class="ease-all"><a href="http://katiesitu.ca/bio"><strong>03 bio</strong></a></li>
 			</ul>
 			</div>
 		</nav>
-		<div class="nav-logo">
-			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/logo-2017-black.svg" alt="Logo Navigation"></a>
+		<div class="logo">
+			<a class="small-logo" href="http://katiesitu.ca/"><img src="img/kaelogo-01.svg" alt="Logo Navigation"></a>
 		</div>
 	</section>
 	
-	<section id="home" class="home">
-		<!--<img class="main-logo" src="img/logo2.svg" alt="Logo">-->
-	</section>
-	
-	<section id="about" class="about grid">
-	<div class="pt1 intro unit unit-s-1 unit-m-1-2">
-		<img src="img/ks-bio.png" alt="katie-situ">
+	<section id="bio" class="bio grid">
+	<div class="info unit unit-s-1">
+		<img src="img/ks-bio-02.png" alt="katie-situ">
 	</div>
-	<div class="pt2 intro unit unit-s-1 unit-m-1-2">
-		<h1>KATIE SITU</h1>
-		<p class="space1">(ottawa, canada)</p>
+	<div class="info unit unit-s-1">
+		<h1><strong>katie situ</strong> <italic>&#40;kae&#41;</italic></h1>
+		<p class="location">(ottawa, canada)</p>
 		<h1>education:</h1>
-		<p>graphic design,
+		<p>ocad in graphic design,
 		<p><i>algonquin college, school of media & design, 2015</i></p>
 		<h1>experience:</h1>
-		<p>stage photographer, we day</p>
-		<p>artist photographer, rbc bluesfest 2015 - 2017</p>
-		<p>freelance photographer: portrait, shows</p>
-		<p>freelance graphic designer: covers, posters, illustration, calligraphy</p>
+		<p>stage photographer, we day<br>rtist photographer, rbc bluesfest 2015 - 2017<br>freelance photographer: portrait, shows<br>freelance graphic designer: covers, posters, illustration, calligraphy</p>
 		<h1>software:</h1>
 		<p>adobe lightroom, photoshop, illustrator, indesign, premiere pro, after effects</p>
 		<h1>interests:</h1>
@@ -71,36 +61,21 @@
 		
 	</div>
 	</section>
-	
-	<footer id="contact" class="contact">
-		<div>
+	<div class="contact">
+		<h1><strong>contact</strong></h1>
+		<p>katie.situ@gmail.com</p>
+</div>
+	<footer id="footer-social" class="footer-social">
+	<p>©2022 katie situ</p> 
+	<div>
 			<ul class="social">
-				<!--<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>-->
 				<li><a href="https://twitter.com/kvesitu"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
-				<!--<li><a href="https://www.behance.net/katiesitu"><i class="fa fa-behance"></i><span class="hide-text">Behance</span></a></li>-->
 				<li><a href="https://www.vimeo.com/katiesitu"><i class="fa fa-vimeo-square"></i><span class="hide-text">Vimeo</span></a></li>
 				<li><a href="https://www.instagram.com/kaesphvto"><i class="fa fa-instagram"></i><span class="hide-text">Instagram</span></a></li>
 			</ul>
 		</div>
-			<p><strong>©2018 KATIE SITU</strong></p> 
 	</footer>
 	
-	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script src="js/jquery.scrollTo.min.js"></script>
-	<script src="js/jquery.localScroll.min.js"></script>
-	<script src="js/waypoints.min.js"></script>
-	<script src="js/main.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	<script type="text/javascript">
-		$(window).load(function() {
-			$('.flexslider').flexslider({
-			animation: "slide",
-			smoothHeight: "true",
-			touch: "true",
-			keyboard: "true",
-			});
-		});
-	</script>
 	<script src="js/nav.js"></script>
 
 </body>
