removed interests and spellchecked words

--- a/bio.html
+++ b/bio.html
@@ -53,11 +53,11 @@
 		<p>ocad in graphic design,
 		<p><i>algonquin college, school of media & design, 2015</i></p>
 		<h1>experience:</h1>
-		<p>stage photographer, we day<br>rtist photographer, rbc bluesfest 2015 - 2017<br>freelance photographer: portrait, shows<br>freelance graphic designer: covers, posters, illustration, calligraphy</p>
+		<p>stage photographer, we day<br>artist photographer, rbc bluesfest 2015 - 2017<br>freelance photographer: portrait, shows<br>freelance graphic designer: covers, posters, illustration, calligraphy</p>
 		<h1>software:</h1>
 		<p>adobe lightroom, photoshop, illustrator, indesign, premiere pro, after effects</p>
-		<h1>interests:</h1>
-		<p>music, concerts, travel, matcha, dystopian shows, fashion</p>
+		<!--<h1>interests:</h1>
+		<p>music, concerts, travel, matcha, dystopian shows, fashion</p>-->
 		
 	</div>
 	</section>
