--- a/bio.html
+++ b/bio.html
@@ -44,14 +44,14 @@
 	
 	<section id="bio" class="bio grid">
 	<div class="info unit unit-s-1">
-		<img src="img/ks-bio-02.png" alt="katie-situ">
+		<img src="img/ks-bio-02.svg" alt="katie-situ">
 	</div>
 	<div class="info unit unit-s-1">
 		<h1><strong>katie situ</strong> <italic>&#40;kae&#41;</italic></h1>
 		<p class="location">(ottawa, canada)</p>
 		<h1>education:</h1>
-		<p>ocad in graphic design,
-		<p><i>algonquin college, school of media & design, 2015</i></p>
+		<p>graphic design,
+		<p><i>algonquin college, school of media & design</i></p>
 		<h1>experience:</h1>
 		<p>stage photographer, we day<br>artist photographer, rbc bluesfest 2015 - 2017<br>freelance photographer: portrait, shows<br>freelance graphic designer: covers, posters, illustration, calligraphy</p>
 		<h1>software:</h1>
@@ -61,10 +61,10 @@
 		
 	</div>
 	</section>
-	<div class="contact">
+	<!--<div class="contact">
 		<h1><strong>contact</strong></h1>
 		<p>katie.situ@gmail.com</p>
-	</div>
+	</div>-->
 		<footer id="footer-social" class="footer-social">
 		<p>©2022 katie situ</p> 
 		<div>
