changed bio info

--- a/bio.html
+++ b/bio.html
@@ -64,7 +64,7 @@
 		<h1>gear:</h1>
 		<p>nikon d850, fujifilm x-t5, pentax k1000</p>-->
 		<h1><strong>katie situ</strong> <italic>&#40;kae&#41;</italic></h1>
-		<p><strong>Katie Situ</strong> is a photographer and graphic designer with a background in graphic design. Her work explores the intersection of both photography and design. Influenced by her love for music, she has naturally focused on creating promotional visuals with local artists and photographing events such as WE Day and RBC Bluesfest. Over the years, she has gained experience in both mediums, specializing in photography, illustration, and post-production.</p>
+		<p><strong>Katie Situ</strong> is a graphic designer and photographer whose work lives at the intersection of visual design and photography. Deeply inspired by her love of music and creative culture, she has developed a strong focus on producing compelling promotional visuals for local artists, as well as capturing the energy of live events such as WE Day and RBC Bluesfest. Over the years, she has built a diverse skill set across both mediums, with particular strengths in photography, illustration, and post-production, allowing her to bring concepts to life from initial idea to final execution.</p>
 		<h1>software:</h1>
 		<p>adobe lightroom, photoshop, illustrator, indesign, premiere pro, after effects</p>
 		<h1>gear:</h1>
