added info in bio

--- a/bio.html
+++ b/bio.html
@@ -64,11 +64,11 @@
 		<h1>gear:</h1>
 		<p>nikon d850, fujifilm x-t5, pentax k1000</p>-->
 		<h1><strong>katie situ</strong> <italic>&#40;kae&#41;</italic></h1>
-		<p><strong>Katie Situ</strong> is a graphic designer and photographer whose work lives at the intersection of visual design and photography. Deeply inspired by her love of music and creative culture, she has developed a strong focus on producing compelling promotional visuals for local artists, as well as capturing the energy of live events such as WE Day and RBC Bluesfest. Over the years, she has built a diverse skill set across both mediums, with particular strengths in photography, illustration, and post-production, allowing her to bring concepts to life from initial idea to final execution.</p>
+		<p>Katie Situ is a graphic designer and photographer whose work lives at the intersection of visual design and photography. Deeply inspired by her love of music and creative culture, she has developed a strong focus on producing compelling promotional visuals for local artists, as well as capturing the energy of live events such as WE Day and RBC Bluesfest. Over the years, she has built a diverse skill set across both mediums, with particular strengths in photography, illustration, and post-production, allowing her to bring concepts to life from initial idea to final execution.</p>
 		<h1>software:</h1>
 		<p>adobe lightroom, photoshop, illustrator, indesign, premiere pro, after effects</p>
 		<h1>gear:</h1>
-		<p>nikon d850, fujifilm x-t5, pentax k1000</p>
+		<p>nikon d850, fujifilm x-t5, sony a7iv, pentax k1000, dji mini 4 pro</p>
 		
 	</div>
 	</section>
